<resources>
	<string name="app_name">iPhone 12, 12 Pro  1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="battery_percent_string">42%</string>
	<string name="time_string">9:41 AM</string>
	<string name="carrier_string">Verizon</string>
	<string name="___sign_in_with_apple_string">Sign in with Google</string>
	<string name="___sign_in_with_apple_ek1_string">Sign IN with Facebook</string>
	<string name="or_string">Or</string>
	<string name="by_continuing__you_agree_to_accept_our__privacy_policy___terms_of_service__string">By continuing, you agree to accept our Privacy Policy &amp; Terms of Service.</string>
	<string name="log_in_string">Log in</string>
	<string name="create_account_string">Create Account</string>
	<string name="password_string">Password</string>
	<string name="email_string">Email</string>
	<string name="iview_string">iView</string>
	<string name="battery_percent_ek1_string">42%</string>
	<string name="time_ek1_string">9:41 AM</string>
	<string name="carrier_ek1_string">Verizon</string>
	<string name="create_account_ek1_string">Create Account</string>
	<string name="sign_up_for_email_updates__string">Sign up for email updates.</string>
	<string name="i_accept_the_terms_of_use__string">I accept the Terms of Use.</string>
	<string name="password_ek1_string">Password</string>
	<string name="email_ek1_string">Email</string>
	<string name="qr_code_string">QR Code</string>
	<string name="united_states__string">United States </string>
	<string name="country_string">Country</string>
	<string name="create_account_ek2_string">Create Account</string>
	<string name="battery_percent_ek2_string">42%</string>
	<string name="time_ek2_string">9:41 AM</string>
	<string name="carrier_ek2_string">Verizon</string>
	<string name="___sign_in_with_apple_ek2_string">Log in</string>
	<string name="password_ek2_string">Password</string>
	<string name="email_ek2_string">Email</string>
	<string name="battery_percent_ek3_string">42%</string>
	<string name="time_ek3_string">9:41 AM</string>
	<string name="carrier_ek3_string">Verizon</string>
	<string name="___sign_in_with_apple_ek3_string">Log in</string>
	<string name="password_ek3_string">Password</string>
	<string name="email_ek3_string">Email</string>
	<string name="___sign_in_with_apple_ek4_string">Log in</string>
	<string name="battery_percent_ek4_string">42%</string>
	<string name="time_ek4_string">9:41 AM</string>
	<string name="carrier_ek4_string">Verizon</string>
	<string name="____input_text_string">Front Yard</string>
	<string name="____caption_string">Settings</string>
	<string name="____caption_ek1_string">Share User</string>
	<string name="____caption_ek2_string">Motion</string>
	<string name="____caption_ek3_string">Recordings</string>
	<string name="____caption_ek4_string">Live View</string>
	<string name="_1_string">1</string>
	<string name="__2_string">2</string>
	<string name="__3_string">3</string>
	<string name="__4_string">4</string>
	<string name="__5_string">5</string>
	<string name="__6_string">6</string>
	<string name="battery_percent_ek5_string">42%</string>
	<string name="time_ek5_string">9:41 AM</string>
	<string name="carrier_ek5_string">Verizon</string>
	<string name="____input_text_ek1_string">Living Room</string>
	<string name="____caption_ek5_string">Settings</string>
	<string name="____caption_ek6_string">Share User</string>
	<string name="____caption_ek7_string">Motion</string>
	<string name="____caption_ek8_string">Recordings</string>
	<string name="____caption_ek9_string">Live View</string>
	<string name="__1_ek1_string">1</string>
	<string name="_2_ek1_string">2</string>
	<string name="__3_ek1_string">3</string>
	<string name="__4_ek1_string">4</string>
	<string name="__5_ek1_string">5</string>
	<string name="__6_ek1_string">6</string>
	<string name="battery_percent_ek6_string">42%</string>
	<string name="time_ek6_string">9:41 AM</string>
	<string name="carrier_ek6_string">Verizon</string>
	<string name="____input_text_ek2_string">Backyard</string>
	<string name="____caption_ek10_string">Settings</string>
	<string name="____caption_ek11_string">Share User</string>
	<string name="____caption_ek12_string">Motion</string>
	<string name="____caption_ek13_string">Recordings</string>
	<string name="____caption_ek14_string">Live View</string>
	<string name="__1_ek2_string">1</string>
	<string name="__2_ek2_string">2</string>
	<string name="__3_ek2_string">3</string>
	<string name="_4_ek2_string">4</string>
	<string name="__5_ek2_string">5</string>
	<string name="__6_ek2_string">6</string>
	<string name="battery_percent_ek7_string">42%</string>
	<string name="time_ek7_string">9:41 AM</string>
	<string name="carrier_ek7_string">Verizon</string>
	<string name="____input_text_ek3_string">Garage</string>
	<string name="____caption_ek15_string">Settings</string>
	<string name="____caption_ek16_string">Share User</string>
	<string name="____caption_ek17_string">Motion</string>
	<string name="____caption_ek18_string">Recordings</string>
	<string name="____caption_ek19_string">Live View</string>
	<string name="__1_ek3_string">1</string>
	<string name="__2_ek3_string">2</string>
	<string name="_3_ek3_string">3</string>
	<string name="__4_ek3_string">4</string>
	<string name="__5_ek3_string">5</string>
	<string name="_6_ek3_string">6</string>
	<string name="____input_text_ek4_string">Basement</string>
	<string name="____input_text_ek5_string">Kitchen</string>
	<string name="____input_text_ek6_string">Backyard</string>
	<string name="____input_text_ek7_string">Garage</string>
	<string name="____input_text_ek8_string">Living room</string>
	<string name="battery_percent_ek8_string">42%</string>
	<string name="time_ek8_string">9:41 AM</string>
	<string name="carrier_ek8_string">Verizon</string>
	<string name="____input_text_ek9_string">Front Yard</string>
	<string name="____string">+</string>
	<string name="battery_percent_ek9_string">42%</string>
	<string name="time_ek9_string">9:41 AM</string>
	<string name="carrier_ek9_string">Verizon</string>
	<string name="____input_text_ek10_string">Kitchen</string>
	<string name="____caption_ek20_string">Settings</string>
	<string name="____caption_ek21_string">Share User</string>
	<string name="____caption_ek22_string">Motion</string>
	<string name="____caption_ek23_string">Recordings</string>
	<string name="____caption_ek24_string">Live View</string>
	<string name="__1_ek4_string">1</string>
	<string name="__2_ek4_string">2</string>
	<string name="__3_ek4_string">3</string>
	<string name="__4_ek4_string">4</string>
	<string name="_5_ek4_string">5</string>
	<string name="__6_ek4_string">6</string>
	<string name="battery_percent_ek10_string">42%</string>
	<string name="time_ek10_string">9:41 AM</string>
	<string name="carrier_ek10_string">Verizon</string>
	<string name="____input_text_ek11_string">Basement</string>
	<string name="____caption_ek25_string">Settings</string>
	<string name="____caption_ek26_string">Share User</string>
	<string name="____caption_ek27_string">Motion</string>
	<string name="____caption_ek28_string">Recordings</string>
	<string name="____caption_ek29_string">Live View</string>
	<string name="__1_ek5_string">1</string>
	<string name="__2_ek5_string">2</string>
	<string name="__3_ek5_string">3</string>
	<string name="__4_ek5_string">4</string>
	<string name="__5_ek5_string">5</string>
	<string name="_6_ek5_string">6</string>
	<string name="battery_percent_ek11_string">42%</string>
	<string name="time_ek11_string">9:41 AM</string>
	<string name="carrier_ek11_string">Verizon</string>
	<string name="____input_text_ek12_string">Front Yard</string>
	<string name="____caption_ek30_string">Settings</string>
	<string name="____caption_ek31_string">Share User</string>
	<string name="____caption_ek32_string">Motion</string>
	<string name="____caption_ek33_string">Recordings</string>
	<string name="____caption_ek34_string">Live View</string>
	<string name="front_yard__today_5_35_p_m__string">Front Yard: Today 5:35 P.M.</string>
	<string name="front_yard__1_23_21_2_24_p_m__string">Front Yard: 1/23/21 2:24 P.M.</string>
	<string name="front_yard__4_11_21_9_51_a_m__string">Front Yard: 4/11/21 9:51 A.M.</string>
	<string name="front_yard__2_12_21_1_12_p_m__string">Front Yard: 2/12/21 1:12 P.M.</string>
	<string name="battery_percent_ek12_string">42%</string>
	<string name="time_ek12_string">9:41 AM</string>
	<string name="carrier_ek12_string">Verizon</string>
	<string name="____input_text_ek13_string">Living Room</string>
	<string name="____caption_ek35_string">Settings</string>
	<string name="____caption_ek36_string">Share User</string>
	<string name="____caption_ek37_string">Motion</string>
	<string name="____caption_ek38_string">Recordings</string>
	<string name="____caption_ek39_string">Live View</string>
	<string name="living_room__today_2_05_p_m__string">Living Room: Today 2:05 P.M.</string>
	<string name="living_room__1_2_21_4_14_p_m__string">Living Room: 1/2/21 4:14 P.M.</string>
	<string name="living_room__1_3_21_9_11_a_m__string">Living Room: 1/3/21 9:11 A.M.</string>
	<string name="living_room__7_4_21_1_32_p_m__string">Living Room: 7/4/21 1:32 P.M.</string>
	<string name="battery_percent_ek13_string">42%</string>
	<string name="time_ek13_string">9:41 AM</string>
	<string name="carrier_ek13_string">Verizon</string>
	<string name="____input_text_ek14_string">Garage</string>
	<string name="____caption_ek40_string">Settings</string>
	<string name="____caption_ek41_string">Share User</string>
	<string name="____caption_ek42_string">Motion</string>
	<string name="____caption_ek43_string">Recordings</string>
	<string name="____caption_ek44_string">Live View</string>
	<string name="garage__2_29_21_4_30_p_m__string">Garage: 2/29/21 4:30 P.M.</string>
	<string name="garage__3_3_21_2_24_p_m__string">Garage: 3/3/21 2:24 P.M.</string>
	<string name="garage__5_21_21_5_24_a_m__string">Garage: 5/21/21 5:24 A.M.</string>
	<string name="garage__1_19_21_2_13_p_m__string">Garage: 1/19/21 2:13 P.M.</string>
	<string name="battery_percent_ek14_string">42%</string>
	<string name="time_ek14_string">9:41 AM</string>
	<string name="carrier_ek14_string">Verizon</string>
	<string name="____input_text_ek15_string">Basement</string>
	<string name="____caption_ek45_string">Settings</string>
	<string name="____caption_ek46_string">Share User</string>
	<string name="____caption_ek47_string">Motion</string>
	<string name="____caption_ek48_string">Recordings</string>
	<string name="____caption_ek49_string">Live View</string>
	<string name="basement__4_25_21_2_50_p_m__string">Basement: 4/25/21 2:50 P.M.</string>
	<string name="basement__1_6_21__2_45_p_m__string">Basement: 1/6/21  2:45 P.M.</string>
	<string name="basement__3_1_21__4_57_a_m__string">Basement: 3/1/21  4:57 A.M.</string>
	<string name="basement__5_19_21_5_03_p_m__string">Basement: 5/19/21 5:03 P.M.</string>
	<string name="battery_percent_ek15_string">42%</string>
	<string name="time_ek15_string">9:41 AM</string>
	<string name="carrier_ek15_string">Verizon</string>
	<string name="____input_text_ek16_string">Kitchen</string>
	<string name="____caption_ek50_string">Settings</string>
	<string name="____caption_ek51_string">Share User</string>
	<string name="____caption_ek52_string">Motion</string>
	<string name="____caption_ek53_string">Recordings</string>
	<string name="____caption_ek54_string">Live View</string>
	<string name="kitchen__2_9_21___2_34_p_m__string">Kitchen: 2/9/21   2:34 P.M.</string>
	<string name="kitchen__5_1_21__3_53_p_m__string">Kitchen: 5/1/21  3:53 P.M.</string>
	<string name="kitchen__4_31_21_5_24_a_m__string">Kitchen: 4/31/21 5:24 A.M.</string>
	<string name="kitchen__3_9_21___4_14_p_m__string">Kitchen: 3/9/21   4:14 P.M.</string>
	<string name="battery_percent_ek16_string">42%</string>
	<string name="time_ek16_string">9:41 AM</string>
	<string name="carrier_ek16_string">Verizon</string>
	<string name="____input_text_ek17_string">Backyard</string>
</resources>